--- a/app/src/main/res/layout/item_list_produto.xml
+++ b/app/src/main/res/layout/item_list_produto.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:layout_weight="1"
-            app:srcCompat="@drawable/ic_baseline_delete" />
+            android:src="@drawable/ic_baseline_delete" />
 
         <ImageView
             android:id="@+id/item_list_btn_edit"
@@ -39,6 +39,6 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:layout_weight="1"
-            app:srcCompat="@drawable/ic_baseline_edit" />
+            android:src="@drawable/ic_baseline_edit" />
     </LinearLayout>
 </LinearLayout>
